Fixed switches being invisible in light mode

--- a/resources/css/custom-stylesheet.css
+++ b/resources/css/custom-stylesheet.css
@@ -602,19 +602,6 @@ body.no-acrylic {
     animation: ameModalOut 0.10s var(--appleEase) forwards;
 }
 
-
-/* @media (prefers-color-scheme: light) {
-    .ameModal {
-        background: rgb(255 255 255 / 92%);
-    }
-}
-
-@media (prefers-color-scheme: dark) {
-    .ameModal {
-        background: rgb(31 31 31 / 85%);
-    }
-} */
-
 .ameUserMenu {
     border-radius: 6px;
     border: .5px solid rgba(0, 0, 0, .2);
@@ -773,6 +760,12 @@ input[type=checkbox][switch]:active::before {
 
 input[type=checkbox][switch]:checked:active::before {
     left: -1px;
+}
+
+@media (prefers-color-scheme: light) {
+    input[type=checkbox][switch] {
+        mix-blend-mode: unset;
+    }
 }
 
 /* End Switch Checkbox */
